--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -335,6 +335,48 @@ If using either the SQL backends, make sure to create a new database before conf
 </fieldset> 
 </div> 
 
+<fieldset> 
+<legend>Plugins/Extensions</legend>
+
+<p>Install the following plugins/extensions:</p>
+
+<p><input type="checkbox"><label>Change the Program Root Password</label></p> 
+
+<p><input type="checkbox"><label>Screen Cache</label></p> 
+
+<p><input type="checkbox"><label>View Logs</label></p> 
+
+<p><input type="checkbox"><label>Tracker</label></p> 
+
+<p><input type="checkbox"><label>Discussion Lists</label><br />
+	<em>Requires Additional Configuration (cronjob)!</em>	
+</p> 
+
+<p><input type="checkbox"><label>Bounce Handler</label></p> 
+<fieldset> 
+	
+	<p><label style="width: 9em;float: left;text-align: right;margin-right: 0.5em;display: block">Bounce Handler Email Address:</label> <input type="text" name="" value="" /></p>
+	<p><label style="width: 9em;float: left;text-align: right;margin-right: 0.5em;display: block">Mail Server:</label> <input type="text" name="" value="" /></p>
+	<p><label style="width: 9em;float: left;text-align: right;margin-right: 0.5em;display: block">Username:</label> <input type="text" name="" value="" /></p>
+	<p><label style="width: 9em;float: left;text-align: right;margin-right: 0.5em;display: block">Password:</label> <input type="text" name="" value="" /></p>
+	<p><em>Requires Additional Configuration! (cronjob)</em></p> 
+
+</fieldset> 
+
+<p><input type="checkbox"><label>Scheduled Mailings</label>	<br />
+	<em>Requires Additional Configuration! (cronjob)</em></p> 
+
+<p><input type="checkbox"><label>Multiple Subscribe</label></p> 
+
+<p><input type="checkbox"><label>Ajax'd Subscription Form</label></p> 
+
+<p><input type="checkbox"><label>Archive Blog Index</label></p> 
+
+<p><input type="checkbox"><label>Sending Monitor Outside Extension</label></p> 
+
+	
+</fieldset> 
+
 
 
 
