Closes #171 Sending Preferences help link not shown
https://github.com/justingit/dada-mail/issues/171

--- a/dada/DADA/Template/templates/sending_preferences_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_preferences_screen.tmpl
@@ -2,6 +2,8 @@
 
 <!-- tmpl_set name="title" value="Sending Preferences" -->
 
+<!-- tmpl_include help_link_widget.tmpl -->
+
 <!-- tmpl_if list_settings.send_via_smtp --> 
 	<p class="alert">Messages are currently being sent via SMTP
 <!-- tmpl_if no_smtp_server_set -->
