--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -340,39 +340,39 @@ If using either the SQL backends, make sure to create a new database before conf
 
 <p>Install the following plugins/extensions:</p>
 
-<p><input type="checkbox"><label>Change the Program Root Password</label></p> 
+<p><input type="checkbox" name="install_change_root_password" value="1" /><label>Change the Program Root Password</label></p> 
 
-<p><input type="checkbox"><label>Screen Cache</label></p> 
+<p><input type="checkbox" name="install_screen_cache" value="1" /><label>Screen Cache</label></p> 
 
-<p><input type="checkbox"><label>View Logs</label></p> 
+<p><input type="checkbox" name="install_log_viewer" value="1" /><label>View Logs</label></p> 
 
-<p><input type="checkbox"><label>Tracker</label></p> 
+<p><input type="checkbox" name="install_tracker" value="1" /><label>Tracker</label></p> 
 
-<p><input type="checkbox"><label>Discussion Lists</label><br />
+<p><input type="checkbox" name="install_dada_bridge" value="1" /><label>Discussion Lists</label><br />
 	<em>Requires Additional Configuration (cronjob)!</em>	
 </p> 
 
-<p><input type="checkbox"><label>Bounce Handler</label></p> 
+<p><input type="checkbox" name="install_dada_bounce_handler" value="1" /><label>Bounce Handler</label></p> 
 <fieldset> 
 	
-	<p><label style="width: 9em;float: left;text-align: right;margin-right: 0.5em;display: block">Bounce Handler Email Address:</label> <input type="text" name="" value="" /></p>
-	<p><label style="width: 9em;float: left;text-align: right;margin-right: 0.5em;display: block">Mail Server:</label> <input type="text" name="" value="" /></p>
-	<p><label style="width: 9em;float: left;text-align: right;margin-right: 0.5em;display: block">Username:</label> <input type="text" name="" value="" /></p>
-	<p><label style="width: 9em;float: left;text-align: right;margin-right: 0.5em;display: block">Password:</label> <input type="text" name="" value="" /></p>
+	<p><label style="width: 9em;float: left;text-align: right;margin-right: 0.5em;display: block">Bounce Handler Email Address:</label> <input type="text" name="dada_bounce_handler_address" value="" /></p>
+	<p><label style="width: 9em;float: left;text-align: right;margin-right: 0.5em;display: block">Mail Server:</label> <input type="text" name="dada_bounce_handler_server" value="" /></p>
+	<p><label style="width: 9em;float: left;text-align: right;margin-right: 0.5em;display: block">Username:</label> <input type="text" name="dada_bounce_handler_username" value="" /></p>
+	<p><label style="width: 9em;float: left;text-align: right;margin-right: 0.5em;display: block">Password:</label> <input type="text" name="dada_bounce_handler_password" value="" /></p>
 	<p><em>Requires Additional Configuration! (cronjob)</em></p> 
 
 </fieldset> 
 
-<p><input type="checkbox"><label>Scheduled Mailings</label>	<br />
+<p><input type="checkbox" name="install_scheduled_mailings" value="1" /><label>Scheduled Mailings</label>	<br />
 	<em>Requires Additional Configuration! (cronjob)</em></p> 
 
-<p><input type="checkbox"><label>Multiple Subscribe</label></p> 
+<p><input type="checkbox" name="install_multiple_subscribe" value="1" /><label>Multiple Subscribe</label></p> 
 
-<p><input type="checkbox"><label>Ajax'd Subscription Form</label></p> 
+<p><input type="checkbox" name="install_ajax_include_subscribe" value="1" /><label>Ajax'd Subscription Form</label></p> 
 
-<p><input type="checkbox"><label>Archive Blog Index</label></p> 
+<p><input type="checkbox" name="install_blog_index" value="1" /><label>Archive Blog Index</label></p> 
 
-<p><input type="checkbox"><label>Sending Monitor Outside Extension</label></p> 
+<p><input type="checkbox" name="install_auto_pickup" value="1" /><label>Sending Monitor Outside Extension</label></p> 
 
 	
 </fieldset> 
