--- a/dada/installer-disabled/templates/cl_help_scrn.tmpl
+++ b/dada/installer-disabled/templates/cl_help_scrn.tmpl
@@ -75,13 +75,15 @@ configuring Dada Mail:
 	use the sql_* parameters you're passing, without attempting to set up 
 	the database, itself. 
 
---skip_configure_dada_files
-	If you pass this parameter with a value of, "1", NO other parameter is
-	really required, except, "--dada_files_loc" PROVIDED that the directory 
-	you pass in that parameter has an already-set up .dada_files directory, 
-	including a valid .dada_config file. When passing this parameter, this 
-	script will simply change the, "dada/DADA/Config.pm" file to point to 
-	the already-created ".dada_files" directory. 
+--if_dada_files_already_exists
+	If you pass this parameter with a value of, "skip_configure_dada_files", 
+	NO other parameter is really required, except, "--dada_files_loc" PROVIDED
+	THAT the directory you pass in that parameter has an already-set up 
+	.dada_files directory,  including a valid .dada_config file. When passing this 
+	parameter, this  script will simply change the, "dada/DADA/Config.pm" file to point to 
+	the already-created ".dada_files" directory.
+	
+	If you pass this paramater with a value of, ""
 		
 OTHER PARAMETERS
 
