--- a/dada/installer-disabled/templates/installer_extra_javascript_widget.tmpl
+++ b/dada/installer-disabled/templates/installer_extra_javascript_widget.tmpl
@@ -1,23 +1,35 @@
 <!-- begin installer_extra_javascript_widget.tmpl --> 
 
- <script src="<!-- tmpl_var my_S_PROGRAM_URL -->/javascripts/dada_mail_admin_js.js" type="text/javascript"></script>
-  <script src="<!-- tmpl_var my_S_PROGRAM_URL -->/javascripts/prototype.js" type="text/javascript"></script>
-  <script src="<!-- tmpl_var my_S_PROGRAM_URL -->/javascripts/scriptaculous.js?load=effects" type="text/javascript"></script>
-	<script type="text/javascript"> 
-	
-	
+<script src="<!-- tmpl_var my_S_PROGRAM_URL -->/javascripts/dada_mail_admin_js.js" type="text/javascript"></script>
+<script src="<!-- tmpl_var my_S_PROGRAM_URL -->/javascripts/prototype.js" type="text/javascript"></script>
+<script src="<!-- tmpl_var my_S_PROGRAM_URL -->/javascripts/scriptaculous.js?load=effects" type="text/javascript"></script>
+<script type="text/javascript"> 
+		
 	 //<![CDATA[
-		function ToggleConfigurationOptions(){ 
+	
+		function ToggleConfigurationOptions(state){ 
 			var togglin = document.getElementById( 'configuration' );
+		//	alert('togglin.style.display ' + togglin.style.display); 
+		//	alert('state ' + state); 
 			
-			if($F('skip_configure_dada_files') == 1){ // that means, dissapear stuff!
-					if(togglin.style.display == ""){	
-						Effect.Fade('configuration');
-					}
+			if(state == 'hide'){
+				if(togglin.style.display == ""){	
+					Effect.Fade('configuration');
+				}
+				else { 
+					/* ... */
+				}
 			}
-			else { 			
-				Effect.Appear('configuration');
+			if(state == 'show'){ 
+				if(togglin.style.display == "none"){
+					Effect.Appear('configuration');
+				}
 			}
+			else { 
+				/* ... */
+			}
+			
+		//	alert('togglin.style.display ' + togglin.style.display); 
 		}
 		
 		function ToggleSQLOptions() { 
