--- a/dada/DADA/Template/templates/send_archive_form_widget.tmpl
+++ b/dada/DADA/Template/templates/send_archive_form_widget.tmpl
@@ -1,10 +1,10 @@
 <!-- begin send_archive_form_widget.tmpl --> 
 
 
-
+<a name="forward_to_a_friend"></a>
 <fieldset>
 	
-<legend>Send This Message to a Friend</legend>
+<legend>Forward to a Friend</legend>
 
 
 
@@ -72,7 +72,7 @@
 
 
 <div class="buttonfloat">
-<input type="submit" class="processing" value="Send Archived Message" />
+<input type="submit" class="processing" value="Forward to a Friend" />
 <div class="floatclear"></div>
 </div> 
 
