--- a/dada/DADA/Template/templates/archive_options_screen.tmpl
+++ b/dada/DADA/Template/templates/archive_options_screen.tmpl
@@ -120,10 +120,10 @@
   <td>
    <p>
     <label for="archive_send_form">
-     Add a &quot;Send this Archive to a Friend&quot; Form
+     Enable &quot;Forward to a Friend &quot;
     </label>
     <br />
-    Visitors will be able to send archived messages they find interesting to friends.
+    Visitors will be able to forward archived messages they find interesting to friends.
    </p>
    
     <table cellspacing="5" <!-- tmpl_unless can_use_captcha -->class="disabled"<!--/tmpl_unless--> >
