--- a/dada/DADA/Template/templates/social_bookmarking_badges_widget.tmpl
+++ b/dada/DADA/Template/templates/social_bookmarking_badges_widget.tmpl
@@ -5,15 +5,26 @@
 
 <ul class="archive_badges_ul">
 
-<li class="archive_badges_li">
- <a name="fb_share" type="button_count" href="http://www.facebook.com/sharer.php">
-	Share
-</a>
-<script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share" type="text/javascript"></script>
 
+			<ul class="archive_badges_ul">
+
+
+			<li class="archive_badges_li">
+
+<!-- Place this tag where you want the +1 button to render -->
+<g:plusone></g:plusone>
+<!--  Place this tag after the last plusone tag -->
+<script type="text/javascript">
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/plusone.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+</script>
 </li>
 
 <li class="archive_badges_li">
+
  <a href="http://del.icio.us/post?url=<!-- tmpl_var uri_encoded_url -->&amp;title=<!-- tmpl_var uri_encoded_subject -->">
  <img src="<!-- tmpl_var PROGRAM_URL -->/img/badge_delicious.png/" style="border:0px;padding:5px" title="Add to: del.icio.us" />
  </a>
@@ -51,6 +62,18 @@
 
 
 </ul> 
+
+	<ul class="archive_badges_ul">
+
+
+	<li class="archive_badges_li">
+	<iframe src="http://www.facebook.com/plugins/like.php?href=<!-- tmpl_var PROGRAM_URL -->/archive/<!-- tmpl_var list_settings.list -->/<!-- tmpl_var id -->/"
+ 			scrolling="no" frameborder="0"
+	        style="border:none; width:450px; height:80px"></iframe>
+	</li>
+</ul> 
+
+
 <hr /> 
 
 
