forward to a friend tweaks

--- a/dada/DADA/Template/templates/archive_options_screen.tmpl
+++ b/dada/DADA/Template/templates/archive_options_screen.tmpl
@@ -120,7 +120,7 @@
   <td>
    <p>
     <label for="archive_send_form">
-     Enable &quot;Forward to a Friend &quot;
+     Enable &quot;Forward to a Friend&quot;
     </label>
     <br />
     Visitors will be able to forward archived messages they find interesting to friends.
@@ -134,7 +134,7 @@
       <td>
        <p>
         <label for="captcha_archive_send_form">
-         Enable CAPTCHA'ing on the, &quot;Send this Archive to a Friend&quot; Form
+         Enable CAPTCHA'ing on the, &quot;Forward to a Friend&quot; Form
         </label>
        </p>
        
