New, "Mailing Monitor" plugin to replace, "auto_pickup.pl" extension

--- a/dada/DADA/Template/templates/example_dada_config.tmpl
+++ b/dada/DADA/Template/templates/example_dada_config.tmpl
@@ -531,6 +531,13 @@ $ADMIN_MENU = [
 #					-Activated  => 1,
 #					},
 
+#					{
+#					-Title      => 'Mailing Monitor',
+#					-Title_URL  => $PLUGIN_URL."/mailing_monitor.cgi",
+#					-Function   => 'mailing_monitor',
+#					-Activated  => 0,
+#					},
+
 				],
 			},
 
@@ -560,13 +567,6 @@ $ADMIN_MENU = [
 #					-Title      => 'Archive Blog Index',
 #					-Title_URL  => $EXT_URL."/blog_index.cgi?mode=html&list=<!-- tmpl_var LT_CHAR -->!-- tmpl_var list_settings.list --<!-- tmpl_var GT_CHAR -->",
 #					-Function   => 'blog_index',
-#					-Activated  => 1,
-#					},
-
-#					{
-#					-Title      => 'Sending Monitor Outside Extension',
-#					-Title_URL  => $EXT_URL."/auto_pickup.pl",
-#					-Function   => 'auto_pickup',
 #					-Activated  => 1,
 #					},
 
