--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -405,7 +405,8 @@ for it to work correctly. For help on setting the cronjob, see the
 
 <p><input type="checkbox" name="install_blog_index" id="install_blog_index" value="1"  /><label for="install_blog_index">Archive Blog Index</label></p> 
 
-<p><input type="checkbox" name="install_auto_pickup" id="install_auto_pickup" value="1" /><label for="install_auto_pickup">Sending Monitor Outside Extension</label></p> 
+<p><input type="checkbox" name="install_mailing_monitor" id="install_mailing_monitor" value="1" /><label for="install_mailing_monitor">Mailing Monitor Plugin</label>
+	 <span class="alert">Requires Additional Configuration (cronjob)</span></p> 
 
 </fieldset> 
 
