New experimental feature to allow you to change the behavior of the unsub link

--- a/dada/DADA/Template/templates/archive_screen.tmpl
+++ b/dada/DADA/Template/templates/archive_screen.tmpl
@@ -7,7 +7,7 @@
 <!-- tmpl_if send_archive_success -->
 	
 	<p class="positive">
-	 Your archived message has been sent!
+	 The message has been forwarded to your friend!
 	</p>
 	
 <!-- /tmpl_if -->
