--- a/dada/DADA/Template/templates/back_link_screen.tmpl
+++ b/dada/DADA/Template/templates/back_link_screen.tmpl
@@ -9,8 +9,8 @@
 <!--/tmpl_if -->
 
 <p>
- Enter your website's name and its URL to create a back link 
- in pages presented to your visitors. Both the site name and 
+ Enter your website's name and its URL to create a Back Link
+ in screens presented to your visitors. Both the site name and 
  site URL are needed to make the link. Leave both text fields 
  blank to remove the link.
 </p>
