Make sure the help link is shown

--- a/dada/DADA/Template/templates/setup_info_screen.tmpl
+++ b/dada/DADA/Template/templates/setup_info_screen.tmpl
@@ -1,7 +1,9 @@
 <!-- begin setup_info_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="<!-- tmpl_var PROGRAM_NAME --> Setup Information" -->
+<!-- tmpl_set name="title" value="Setup Information" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
+<!-- tmpl_include help_link_widget.tmpl --> 
+
 
 <h1>Installation and Configuration</h1> 
 
