--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -406,6 +406,9 @@ for it to work correctly. For help on setting the cronjob, see the
 	
 </div> 
 
+<p><input type="checkbox" name="install_mailing_monitor" id="install_mailing_monitor" value="1" /><label for="install_mailing_monitor">Mailing Monitor Plugin</label>
+	 <span class="alert">Requires Additional Configuration (cronjob)</span></p
+	
 <p><input type="checkbox" name="install_change_root_password" id="install_change_root_password" value="1" /><label for="install_change_root_password">Change the Program Root Password</label></p> 
 
 <p><input type="checkbox" name="install_screen_cache" id="install_screen_cache" value="1" /><label for="install_screen_cache">Screen Cache</label></p> 
