--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -389,7 +389,7 @@ If using either the SQL backends, make sure to create a new database before conf
 </fieldset> 
 
 <fieldset> 
-<legend>Plugins/Extensions [<a href="#" onclick="toggleDisplay('plugins_extensions_help');return false;">?</a>]</legend>
+<legend>Plugins/Extensions (Optional) [<a href="#" onclick="toggleDisplay('plugins_extensions_help');return false;">?</a>]</legend>
 
 <div id="plugins_extensions_help" style="display:none"> 
 
@@ -447,9 +447,6 @@ for it to work correctly. For help on setting the cronjob, see the
 <p><input type="checkbox" name="install_ajax_include_subscribe" id="install_ajax_include_subscribe" value="1" /><label for="install_ajax_include_subscribe">Ajax'd Subscription Form</label></p> 
 
 <p><input type="checkbox" name="install_blog_index" id="install_blog_index" value="1"  /><label for="install_blog_index">Archive Blog Index</label></p> 
-
-<p><input type="checkbox" name="install_mailing_monitor" id="install_mailing_monitor" value="1" /><label for="install_mailing_monitor">Mailing Monitor Plugin</label>
-	 <span class="alert">Requires Additional Configuration (cronjob)</span></p> 
 
 </fieldset> 
 
