Working on, "invite-only" lists and making closed lists truly closed.

--- a/dada/DADA/Template/templates/list_options_screen.tmpl
+++ b/dada/DADA/Template/templates/list_options_screen.tmpl
@@ -96,6 +96,54 @@
 
 
 <fieldset>
+<legend>
+ Subscription Confirmations
+</legend>
+
+
+<table cellspacing="5">
+  <tr>
+   <td>
+    <p>
+     <input type="checkbox" name="invite_only_list" id="invite_only_list" value="1" <!-- tmpl_if list_settings.invite_only_list -->checked="checked"<!--/tmpl_if--> />
+    </p>
+   </td>
+   <td>
+    <p>
+     <label for="invite_only_list">
+      Invitation Only List
+     </label>
+     <br />
+     Subscribers may only be subscribed by a list invitation.
+    </p>
+
+	<!-- 
+
+
+	<p>
+	 <em>
+	  Allow subscribers to invite other people. 
+	 </em>
+	</p>
+
+--> 
+
+
+   </td>
+  </tr>
+</table> 
+
+</fieldset> 
+
+
+
+
+
+
+
+
+
+<fieldset>
 
 <legend>
  Subscription Confirmations
