--- a/dada/DADA/Template/templates/add_screen.tmpl
+++ b/dada/DADA/Template/templates/add_screen.tmpl
@@ -5,7 +5,48 @@
 
 
 
+<script type="text/javascript">
+    //<![CDATA[
+        var check = 0; 
+        function enable_check() { 
+
+                check = 1;
+                do_check_status();
+        }
+        function do_check_status(){ 
+            if(check == 1){
+                update_status_bar();
+            }
+        }
+
+		 function update_status_bar(){ 
+			new Ajax.Updater(
+				'statusbar', '<!-- tmpl_var S_PROGRAM_URL -->', 
+				{ 
+				    method: 'post', 
+					parameters: {
+						rand_string:               $F('rand_string'),
+						new_email_file:            $F('new_email_file'), 
+						f:                         'check_status',
+
+						},
+				onCreate: 	 function() {
+				
+				},
+				onComplete: 	 function() {
+					$('statusbar').show(); 
+				}
+				});
+		}
+        setInterval("do_check_status();",'1000');
+
+    //]]>
+</script>
+
+
+
 <!-- tmpl_include list_type_switch_widget.tmpl -->
+
 
 <p>
  Manage Subscribers (<!-- tmpl_var type_title -->)
@@ -58,86 +99,22 @@
 	<!--/tmpl_if-->
 	
 <!--/tmpl_if-->
-<!-- tmpl_if list_type_isa_list -->
-	<!-- tmpl_if list_settings.closed_list -->
-		<!-- tmpl_unless list_settings.enable_mass_subscribe --> unless list settings. enable mass subscribe
-		 <div style="background:#fcc;margin:5px;padding:5px;text-align:center">
-		 <h1>Warning!</h1> 
-		 <p>
-		 	You currently have a <strong>closed list</strong> and subscribing members via the list 
-			control panel is <strong>disabled</strong>. Subscribers will not be able to 
-			confirm any list invitations that you send. 
+
+<!-- tmpl_if list_is_closed -->
+		 <p class="error">
+		 	<strong>Disabled</strong>. You currently have a <strong>closed list</strong>.
 			 </p> 
-			</div> 
-		<!-- /tmpl_unless --> 
-	<!-- /tmpl_if -->
-<!-- /tmpl_if --> 
+			
+<!-- tmpl_else -->
 
+	<p>
 
-<p>
-
-<fieldset> 
+	<fieldset> 
 	
-	<legend>
-		 <a href="#" onclick="toggleDisplay('add_one');return false;">
-		+/- 
-	</a>
-	<!-- tmpl_if list_type_isa_list -->
-		Invite
-		<!-- tmpl_if list_settings.enable_mass_subscribe -->
-			/ Add
-		<!-- /tmpl_if -->
-	<!-- tmpl_else --> 
-		Add
-	<!-- /tmpl_if -->
-	
-	 Just One Address
-	</legend>
-<div id ="add_one" style="display:none"> 
-	
-	<form name="via_add_one"  action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
-	
-	 <input type="hidden" name="f"    id="f" value="add" />
-	 <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
-	 <input type="hidden" name="process" value="1" />
-	 <input type="hidden" name="rand_string" id="rand_string" value="<!-- tmpl_var rand_string -->" />
-
-	<input type="hidden" name="method" value="via_add_one" /> 
-
-	 <p>
-	     <label for="email" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
-	      Email Address:
-	     </label>
-	    <input type="text" name="email" id="email" value=""  />
-	    </p>
-	
-		
-	<!-- tmpl_loop fields --> 
-	    <p>
-	     <label for="<!-- tmpl_var name escape=HTML -->" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
-	      <!-- tmpl_var label escape="HTML" --> (<!-- tmpl_var name escape="HTML" -->): 
-	     </label>
-	    <input type="text" name="<!-- tmpl_var name escape=HTML -->" id="<!-- tmpl_var name escape=HTML -->" value="<!-- tmpl_var value escape=HTML -->"  />
-	    </p>
-	<!--/tmpl_loop-->
-
-
-	 <div class="buttonfloat">
-	  <input type="reset"  class="cautionary" value="Clear Changes" />
-	  <input type="submit" class="processing" value="Verify Address..." />
-	 </div>
-	 <div class="floatclear"></div>
-
-</form> 
-	
-		
-</div> 
-
-</fieldset> 
-
-<fieldset style="background:#e6e6e6">
-	<legend>
-		
+		<legend>
+			 <a href="#" onclick="toggleDisplay('add_one');return false;">
+			+/- 
+		</a>
 		<!-- tmpl_if list_type_isa_list -->
 			Invite
 			<!-- tmpl_if list_settings.enable_mass_subscribe -->
@@ -146,148 +123,146 @@
 		<!-- tmpl_else --> 
 			Add
 		<!-- /tmpl_if -->
-		
-		 a Bunch of Addresses</legend>
-
-    <p>
-      <label for="new_emails">
-            Enter
-     </label> 
-     new subscribers (one subscriber per line) in the following <strong>CSV format</strong>: </p> 
-     
-     <p><code>Email Address<!-- tmpl_loop fields -->, <!-- tmpl_var name --><!-- /tmpl_loop --></code></p>
-
-
-
-<fieldset> 
-	<legend>Paste Addresses Below:</legend>
-
-<form name="paste_addresses"  action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
- <input type="hidden" name="f"    id="f" value="add" />
- <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
- <input type="hidden" name="process" value="1" />
- <input type="hidden" name="rand_string" id="rand_string" value="<!-- tmpl_var rand_string -->" />
-
-<input type="hidden" name="method" value="via_textarea" /> 
-
-
-
- <p>
-  <textarea name="new_emails" id="new_emails" rows="5" cols="40"></textarea>
- </p>
-
-
- <div class="buttonfloat">
-  <input type="reset"  class="cautionary" value="Clear Changes" />
-  <input type="submit" class="processing" value="Verify Addresses..." />
- </div>
- <div class="floatclear"></div>
-</form>
-
-
-
-
-</fieldset> 
-
-
-<fieldset> 
-	<legend>Upload From File</legend>
-
-
-
- <p>
-  Alternatively,  
-  <label for="new_email_file">
-   upload
-  </label>
-  a text file in the same <strong>CSV format</strong> mentioned above.
- </p>
-
-<form name="default_form" enctype="multipart/form-data" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" onSubmit="enable_check();">
-
-	<div id="statusbar" style="width:1px solid black"></div>
-	<div class="floatclear"></div>
-
-<input type="hidden" name="f"    id="f" value="add" />
-<input type="hidden" name="type" value="<!-- tmpl_var type -->" />
-<input type="file"   name="new_email_file" id="new_email_file" />
-<input type="hidden" name="process" value="1" />
-<input type="hidden" name="rand_string" id="rand_string" value="<!-- tmpl_var rand_string -->" />
-<input type="hidden" name="method" value="via_file_upload" /> 
-
-
-
-
-<script type="text/javascript">
-    //<![CDATA[
-
-        var check = 0; 
-        function enable_check() { 
-
-                check = 1;
-                do_check_status();
-        }
-
-        function do_check_status(){ 
-            if(check == 1){
-                update_status_bar();
-            }
-        }
-
-
-		 function update_status_bar(){ 
-			new Ajax.Updater(
-				'statusbar', '<!-- tmpl_var S_PROGRAM_URL -->', 
-				{ 
-				    method: 'post', 
-					parameters: {
-						rand_string:               $F('rand_string'),
-						new_email_file:            $F('new_email_file'), 
-						f:                         'check_status',
-
-						},
-
-				onCreate: 	 function() {
-				
-				},
-				onComplete: 	 function() {
-
-					$('statusbar').show(); 
-				
-				}
-
-
-				});
-		}
-        setInterval("do_check_status();",'1000');
-
-    //]]>
-</script>
-
-
-
-
-
-
-
-		
-
 	
- <div class="buttonfloat">
-  <input type="reset"  class="cautionary" value="Clear Changes" />
-  <input type="submit" class="processing" value="Verify Addresses..." />
- </div>
- <div class="floatclear"></div>
-</form>
+		 Just One Address
+		</legend>
+	<div id ="add_one" style="display:none"> 
+	
+		<form name="via_add_one"  action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
+	
+		 <input type="hidden" name="f"    id="f" value="add" />
+		 <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
+		 <input type="hidden" name="process" value="1" />
+		 <input type="hidden" name="rand_string" id="rand_string" value="<!-- tmpl_var rand_string -->" />
+
+		<input type="hidden" name="method" value="via_add_one" /> 
+
+		 <p>
+		     <label for="email" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
+		      Email Address:
+		     </label>
+		    <input type="text" name="email" id="email" value=""  />
+		    </p>
+	
+		
+		<!-- tmpl_loop fields --> 
+		    <p>
+		     <label for="<!-- tmpl_var name escape=HTML -->" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
+		      <!-- tmpl_var label escape="HTML" --> (<!-- tmpl_var name escape="HTML" -->): 
+		     </label>
+		    <input type="text" name="<!-- tmpl_var name escape=HTML -->" id="<!-- tmpl_var name escape=HTML -->" value="<!-- tmpl_var value escape=HTML -->"  />
+		    </p>
+		<!--/tmpl_loop-->
 
 
-</fieldset> 
+		 <div class="buttonfloat">
+		  <input type="reset"  class="cautionary" value="Clear Changes" />
+		  <input type="submit" class="processing" value="Verify Address..." />
+		 </div>
+		 <div class="floatclear"></div>
+
+	</form> 
+	
+		
+	</div> 
+
+	</fieldset> 
+
+	<fieldset style="background:#e6e6e6">
+		<legend>
+		
+			<!-- tmpl_if list_type_isa_list -->
+				Invite
+				<!-- tmpl_if list_settings.enable_mass_subscribe -->
+					/ Add
+				<!-- /tmpl_if -->
+			<!-- tmpl_else --> 
+				Add
+			<!-- /tmpl_if -->
+		
+			 a Bunch of Addresses</legend>
+
+	    <p>
+	      <label for="new_emails">
+	            Enter
+	     </label> 
+	     new subscribers (one subscriber per line) in the following <strong>CSV format</strong>: </p> 
+     
+	     <p><code>Email Address<!-- tmpl_loop fields -->, <!-- tmpl_var name --><!-- /tmpl_loop --></code></p>
+
+
+
+	<fieldset> 
+		<legend>Paste Addresses Below:</legend>
+
+	<form name="paste_addresses"  action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
+	 <input type="hidden" name="f"    id="f" value="add" />
+	 <input type="hidden" name="type" value="<!-- tmpl_var type -->" />
+	 <input type="hidden" name="process" value="1" />
+	 <input type="hidden" name="rand_string" id="rand_string" value="<!-- tmpl_var rand_string -->" />
+
+	<input type="hidden" name="method" value="via_textarea" /> 
+
+
+
+	 <p>
+	  <textarea name="new_emails" id="new_emails" rows="5" cols="40"></textarea>
+	 </p>
+
+
+	 <div class="buttonfloat">
+	  <input type="reset"  class="cautionary" value="Clear Changes" />
+	  <input type="submit" class="processing" value="Verify Addresses..." />
+	 </div>
+	 <div class="floatclear"></div>
+	</form>
+
+
+
+
+	</fieldset> 
+
+
+	<fieldset> 
+		<legend>Upload From File</legend>
+
+
+
+	 <p>
+	  Alternatively,  
+	  <label for="new_email_file">
+	   upload
+	  </label>
+	  a text file in the same <strong>CSV format</strong> mentioned above.
+	 </p>
+
+	<form name="default_form" enctype="multipart/form-data" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" onSubmit="enable_check();">
+
+		<div id="statusbar" style="width:1px solid black"></div>
+		<div class="floatclear"></div>
+
+	<input type="hidden" name="f"    id="f" value="add" />
+	<input type="hidden" name="type" value="<!-- tmpl_var type -->" />
+	<input type="file"   name="new_email_file" id="new_email_file" />
+	<input type="hidden" name="process" value="1" />
+	<input type="hidden" name="rand_string" id="rand_string" value="<!-- tmpl_var rand_string -->" />
+	<input type="hidden" name="method" value="via_file_upload" /> 
+	
+	 <div class="buttonfloat">
+	  <input type="reset"  class="cautionary" value="Clear Changes" />
+	  <input type="submit" class="processing" value="Verify Addresses..." />
+	 </div>
+	 <div class="floatclear"></div>
+	</form>
+
+
+	</fieldset> 
 
     
 
 
- </fieldset>
+	 </fieldset>
 
-
+<!-- /tmpl_if -->
 
 <!-- end add_screen.tmpl -->
