--- a/dada/DADA/Template/templates/subscription_form_widget.tmpl
+++ b/dada/DADA/Template/templates/subscription_form_widget.tmpl
@@ -15,14 +15,25 @@
 
 <fieldset>
 <legend>
- Subscribe/Unsubscribe <!-- tmpl_if single_list --> on <!-- tmpl_var list_name --><!-- tmpl_else --> a List<!-- /tmpl_if single_list -->
+ Subscribe/Unsubscribe <!-- tmpl_if single_list --> on <!-- tmpl_var list_settings.list_name --><!-- tmpl_else --> a List<!-- /tmpl_if single_list -->
 </legend>
 
 <!-- tmpl_if single_list --> 
-    <!-- tmpl_if closed_list -->
-    <p class="error"> 
-     This list is currently closed to future subscribers. You may still unsubscribe.
-    </p>
+
+    <!-- tmpl_if list_settings.closed_list -->
+
+	    <p class="error"> 
+	     This list is currently closed to future subscribers. You may still unsubscribe.
+	    </p>
+	
+	<!-- tmpl_else --> 
+	
+		<!-- tmpl_if list_settings.invite_only_list --> 
+			<p class="error">
+				This mailing list is currently invitation-only. You may still unsubscribe.
+			</p>
+		<!-- /tmpl_if -->
+		
     <!-- /tmpl_if -->
 
     <input type="hidden" name="list" value="<!-- tmpl_var list escape=HTML -->" />
@@ -60,14 +71,16 @@ Email&nbsp;Address:
 
 </p>
 
+
+	
 <!-- tmpl_if show_fields --> 
 
 	<!-- tmpl_if subscriber_fields --> 
-	
+
 	    <hr style="border-top: 1px solid black;" /> 
 
 	    <!-- tmpl_loop subscriber_fields --> 
-    
+  
 	        <p>
 	        <label for="<!-- tmpl_var name escape=HTML -->" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
 	        <!-- tmpl_if pretty_name --> 
@@ -78,38 +91,47 @@ Email&nbsp;Address:
 			</label>
 	        <input type="text" name="<!-- tmpl_var name escape=HTML -->" id="<!-- tmpl_var name escape=HTML -->" value="<!-- tmpl_var given_value escape=HTML -->"  />
 	        </p>
-    
-    
+  
+  
 	    <!-- /tmpl_loop --> 
 
 	<!-- /tmpl_if --> 
 
-<!-- /tmpl_if --> 
 
 
+<!-- /tmpl_if -->
 <hr style="border-top: 1px solid black;" /> 
 
-<!-- tmpl_if closed_list --> 
+<!-- tmpl_if list_settings.closed_list --> 
 
-    
+ 
     <p> 
     <label for="f_u" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">Unsubscribe</label> 
     <input type="radio" name="f"  id="f_u"  value="unsubscribe" checked="checked" />
     </p>  
 
 <!-- tmpl_else --> 
-    <p>
-    <label for="f_s" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
-    Subscribe
-    </label>
-    <input type="radio" name="f" id="f_s" value="subscribe" <!-- tmpl_if flavor_is_subscribe -->checked="checked"<!-- /tmpl_if --> />
-    </p> 
+	
+	<!-- tmpl_if list_settings.invite_only_list -->
+		
+		<p> 
+	    <label for="f_u" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">Unsubscribe</label> 
+	    <input type="radio" name="f"  id="f_u"  value="unsubscribe" checked="checked" />
+	    </p>
+	
+	<!-- tmpl_else --> 
+		<p>
+	    <label for="f_s" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
+	    Subscribe
+	    </label>
+	    <input type="radio" name="f" id="f_s" value="subscribe" <!-- tmpl_if flavor_is_subscribe -->checked="checked"<!-- /tmpl_if --> />
+	    </p> 
     
-    <p> 
-    <label for="f_u" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">Unsubscribe</label> 
-    <input type="radio" name="f"  id="f_u"  value="unsubscribe" <!-- tmpl_if flavor_is_unsubscribe -->checked="checked"<!-- /tmpl_if --> />
-    </p>   
-
+	    <p> 
+	    <label for="f_u" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">Unsubscribe</label> 
+	    <input type="radio" name="f"  id="f_u"  value="unsubscribe" <!-- tmpl_if flavor_is_unsubscribe -->checked="checked"<!-- /tmpl_if --> />
+	    </p>
+	<!-- /tmpl_if --> 
 <!-- /tmpl_if --> 
 
 <hr style="border-top: 1px solid black;" /> 
